# Tool-Airtest-Win-11

./: README.md  download_binaries.py  metadata.json  pyproject.toml  setup.py  test_airtouch.py
airtouch_fast/: __init__.py  utils.py  wrapper.py
airtouch_fast/binaries/arm64-v8a/: minicap
airtouch_fast/binaries/armeabi/: minitouch
airtouch_fast/binaries/armeabi-v7a/: minicap  minitouch-nopie
airtouch_fast/binaries/mips64/: minitouch-nopie
airtouch_fast/binaries/x86/: minicap  minicap-nopie
airtouch_fast/binaries/x86_64/: minicap  minitouch-nopie
src/: App.tsx  index.css
temp_static/adb/linux/: adb
temp_static/adb/linux_arm/: adb
temp_static/adb/mac/: adb
temp_static/apks/: Yosemite.apk
temp_static/stf_libs/arm64-v8a/: minitouch
temp_static/stf_libs/armeabi/: minitouch-nopie
temp_static/stf_libs/armeabi-v7a/: minicap-nopie  minitouch
temp_static/stf_libs/mips/: minitouch  minitouch-nopie
temp_static/stf_libs/x86/: minitouch  minitouch-nopie
